Add foundation for image color adjust

--- a/Hero/Hero.csproj
+++ b/Hero/Hero.csproj
@@ -48,7 +48,8 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="HeroInfo.cs" />
+    <Compile Include="HeroInformation\HeroInfo.cs" />
+    <Compile Include="ImageEditor\ImageEdit.cs" />
     <Compile Include="NetWorking\Net.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
